@@ -431,13 +431,17 @@ final class CodeGenerator {
     Type dataType = null;
 
     switch (fldTypeName) {
-      case "byte", "boolean":
+      case "byte":
+      case "boolean":
         {
           fldType = fldTypeName.equals("byte") ? Type.BYTE_TYPE : Type.BOOLEAN_TYPE;
           dataType = Type.BYTE_TYPE;
           break;
         }
-      case "short", "char", "int", "long":
+      case "short":
+      case "char":
+      case "int":
+      case "long":
         {
           dataType = Type.LONG_TYPE;
           switch (fldTypeName) {
@@ -601,7 +605,8 @@ final class CodeGenerator {
     // stack: [stream]
     String fldTypeName = fldType.getName();
     switch (fldTypeName) {
-      case "byte", "boolean":
+      case "byte":
+      case "boolean":
         {
           if (keepStream) {
             mv.visitInsn(Opcodes.DUP); // [stream, stream]
@@ -702,14 +707,18 @@ final class CodeGenerator {
     int arrayOpcode = 0;
 
     switch (fldTypeName) {
-      case "byte", "boolean":
+      case "byte":
+      case "boolean":
         {
           fldType = fldTypeName.equals("byte") ? Type.BYTE_TYPE : Type.BOOLEAN_TYPE;
           arrayOpcode = fldTypeName.equals("byte") ? Opcodes.T_BYTE : Opcodes.T_BOOLEAN;
           dataType = Type.BYTE_TYPE;
           break;
         }
-      case "short", "char", "int", "long":
+      case "short":
+      case "char":
+      case "int":
+      case "long":
         {
           dataType = Type.LONG_TYPE;
           switch (fldTypeName) {
@@ -953,17 +962,22 @@ final class CodeGenerator {
   }
 
   private static String getPrimitiveReadOperation(Type type) {
-    return switch (type.getSort()) {
-      case Type.BYTE -> "read";
-      case Type.BOOLEAN -> "read";
-      case Type.SHORT -> "readVarint";
-      case Type.CHAR -> "readVarint";
-      case Type.INT -> "readVarint";
-      case Type.LONG -> "readVarint";
-      case Type.FLOAT -> "readFloat";
-      case Type.DOUBLE -> "readDouble";
-      default -> throw new RuntimeException("Unexpected type: " + type.getDescriptor());
-    };
+    switch (type.getSort()) {
+      case Type.BYTE:
+      case Type.BOOLEAN:
+        return "read";
+      case Type.SHORT:
+      case Type.CHAR:
+      case Type.INT:
+      case Type.LONG:
+        return "readVarint";
+      case Type.FLOAT:
+        return "readFloat";
+      case Type.DOUBLE:
+        return "readDouble";
+      default:
+        throw new RuntimeException("Unexpected type: " + type.getDescriptor());
+    }
   }
 
   private static void handleSimpleField(
@@ -976,7 +990,8 @@ final class CodeGenerator {
     // stack: [this, stream]);
     String fldTypeName = fld.getType().getName();
     switch (fldTypeName) {
-      case "byte", "boolean":
+      case "byte":
+      case "boolean":
         {
           mv.visitMethodInsn(
               Opcodes.INVOKEVIRTUAL,
@@ -993,7 +1008,10 @@ final class CodeGenerator {
                   : Type.BOOLEAN_TYPE.getDescriptor()); // []
           break;
         }
-      case "short", "char", "int", "long":
+      case "short":
+      case "char":
+      case "int":
+      case "long":
         {
           mv.visitMethodInsn(
               Opcodes.INVOKEVIRTUAL,
@@ -1356,27 +1374,48 @@ final class CodeGenerator {
 
           MetadataClass fldType = field.getType();
           while (fldType.isSimpleType()) {
-            fldType = fldType.getFields().getFirst().getType();
+            java.util.List<MetadataField> fl = fldType.getFields();
+            fldType = fl.get(0).getType();
           }
 
           String fldTypeNameResolved = fldType.getName();
-          Class<?> fldClz =
-              switch (fldTypeNameResolved) {
-                case "byte" -> byte.class;
-                case "boolean" -> boolean.class;
-                case "short" -> short.class;
-                case "char" -> char.class;
-                case "int" -> int.class;
-                case "long" -> long.class;
-                case "float" -> float.class;
-                case "double" -> double.class;
-                case "java.lang.String" -> String.class;
-                default -> context.getClassTargetType(fldTypeNameResolved);
-              };
+          Class<?> fldClz;
+          switch (fldTypeNameResolved) {
+            case "byte":
+              fldClz = byte.class;
+              break;
+            case "boolean":
+              fldClz = boolean.class;
+              break;
+            case "short":
+              fldClz = short.class;
+              break;
+            case "char":
+              fldClz = char.class;
+              break;
+            case "int":
+              fldClz = int.class;
+              break;
+            case "long":
+              fldClz = long.class;
+              break;
+            case "float":
+              fldClz = float.class;
+              break;
+            case "double":
+              fldClz = double.class;
+              break;
+            case "java.lang.String":
+              fldClz = String.class;
+              break;
+            default:
+              fldClz = context.getClassTargetType(fldTypeNameResolved);
+          }
           boolean withConstantPool = field.hasConstantPool();
           Set<FieldMapping> mappings = fieldMap.get(fieldName);
           if (mappings == null) {
-            mappings = Set.of(new FieldMapping(fieldName, false));
+            mappings = new HashSet<>();
+            mappings.add(new FieldMapping(fieldName, false));
           }
           boolean generateRefField = true;
           for (FieldMapping mapping : mappings) {
@@ -1421,7 +1460,7 @@ final class CodeGenerator {
             prepareEmptyMethod(m, cw);
           }
         }
-        checkClasses.addAll(Arrays.stream(checkClass.getInterfaces()).toList());
+        checkClasses.addAll(Arrays.asList(checkClass.getInterfaces()));
       }
       // add factory method returning the created instance
       prepareFactory(cw, clzName.replace('.', '/'));
@@ -1444,7 +1483,7 @@ final class CodeGenerator {
       // Define the class using the best available strategy for the current JDK
       Class<?> implClz;
       try {
-        var definer = ClassDefiners.best();
+        ClassDefiner definer = ClassDefiners.best();
         if (log.isDebugEnabled()) {
           log.debug("Generating typed class using definer: {}", definer.name());
         }
